--- a/.github/workflows/auto-pr-security.yml
+++ b/.github/workflows/auto-pr-security.yml
@@ -1,54 +1,70 @@
 name: Auto PR (DVWA security fixes)
 
 on:
-  workflow_dispatch:        # run by button
-  schedule: [{ cron: "14 5 * * 1" }]
+  workflow_dispatch:
+  schedule:
+    - cron: "14 5 * * 1"   # every Monday 05:14 UTC
 
+# allow GITHUB_TOKEN to push and open PRs
 permissions:
   contents: write
   pull-requests: write
 
+concurrency:
+  group: autopatch-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   autopatch:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      # Robust Python + Semgrep install
-      - name: Set up Python
+    steps:
+      - name: Checkout (full history, keep credentials)
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
+
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install Semgrep (robust)
-        run: |
-          python -m pip install --upgrade pip
-          # --user + add to PATH avoids PEP 668 issues
-          pip install --user semgrep
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Install Semgrep (user install; add to PATH)
         env:
           PIP_BREAK_SYSTEM_PACKAGES: 1
-        continue-on-error: true
+        run: |
+          python -m pip install --upgrade pip
+          pip install --user "semgrep>=1.76.0"
+          echo "$HOME/.local/bin" >> "$GITHUB_PATH"
 
-      # Report-only scan (won't fail the job)
-      - name: Semgrep scan (report)
-        run: semgrep --config p/php --config p/owasp-top-ten --json --output semgrep.json || true
+      - name: Semgrep scan (report only)
+        run: |
+          semgrep --metrics=off \
+                  --config=p/php \
+                  --config=p/owasp-top-ten \
+                  --json --output semgrep.json || true
 
-      # Autofix using your rules file (if present)
-      - name: Semgrep autofix (targeted rules)
-        if: hashFiles('.semgrep-fixes.yml') != ''
-        run: semgrep --config .semgrep-fixes.yml --fix || true
+      - name: Semgrep autofix (if rules file exists)
+        if: ${{ hashFiles('.semgrep-fixes.yml') != '' }}
+        run: semgrep --metrics=off --config .semgrep-fixes.yml --fix || true
 
-      # Fallback: simple search/replace to ensure a demo change even if Semgrep didn’t run
+      # simple hardening so we always have a demonstrable change
       - name: Fallback patch (ensure at least one change)
         run: |
           shopt -s globstar || true
+          changed=0
           for f in **/*.php; do
             [ -f "$f" ] || continue
-            sed -E -i "s/echo[[:space:]]+\$_GET\[(.+)\];/echo htmlspecialchars(\$_GET[\1], ENT_QUOTES, 'UTF-8');/g" "$f" || true
+            # escape echoed GET params (very conservative)
+            sed -E -i "s/echo[[:space:]]+\$_GET\[(.+)\];/echo htmlspecialchars(\$_GET[\1], ENT_QUOTES | ENT_SUBSTITUTE, 'UTF-8');/g" "$f" && changed=1 || true
           done
+          # create a tiny marker if nothing changed so PR action always has something to commit
+          if [ "$changed" -eq 0 ]; then
+            echo "autopatch run $(date -u +%FT%TZ)" >> .autopatch.log
+          fi
 
-      - name: Attach scan report
+      - name: Upload semgrep report
         uses: actions/upload-artifact@v4
         with:
           name: semgrep-report
@@ -59,11 +75,17 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           branch: security/auto-fix
+          base: master                # change to 'main' if your default branch is main
           commit-message: "chore(security): automated fixes"
           title: "chore(security): automated fixes (DVWA)"
           body: |
-            Automated PR:
-            - Semgrep scan (artifact attached if available)
+            Automated PR created by GitHub Actions.
+
+            - Semgrep scan (artifact attached)
             - Auto-hardening for echoed request params (XSS)
-            Review & merge if OK.
-          labels: security, automated
+            - Any additional fixes from `.semgrep-fixes.yml` if present
+
+            Please review and merge.
+          labels: |
+            security
+            automated
